<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">约求</string>
    <string name="billiard_group">台球圈</string>
    <string name="billiard_all">全部</string>
    <string name="billiard_get_master">拜师</string>
    <string name="billiard_be_master">收徒</string>
    <string name="billiard_find_friend">交友</string>
    <string name="billiard_equipment">装备</string>
    <string name="billiard_other">其他</string>
    <string name="billiard_time">时间</string>
    <string name="billiard_popularity">人气</string>
    <string name="billiard_search">附近</string>
    <string name="billiard_key_serach">关键字搜索</string>
    <string name="billiard_post">发表</string>
    <string name="action_delete">删除</string>
    <string name="billiard_group_detail">详情</string>
    <string name="billiard_group_issue_article">发表话题</string>
    <string name="billiard_topic_type">话题类型</string>
    <string name="please_input_title">请输入标题</string>
    <string name="please_select_topic_type">请选择话题类型</string>
    <string name="please_input_content">请输入内容</string>
    <string name="no_group_info">抱歉，目前没有台球圈的信息</string>
    <string name="no_group_type_info">抱歉,目前没有<xliff:g id="type">%1$s</xliff:g>的信息</string>
    <string name="no_newer_info">当前已经是最新的信息了</string>
    <string name="have_already_update_info">共更新<xliff:g id="number">%1$s</xliff:g>条信息</string>
    <string name="no_more_group_info">没有更多的台球圈信息了</string>
    <string name="no_group_detail_info">未获取详情信息</string>
    <string name="praise">赞 <xliff:g id="count">%1$s</xliff:g></string>
    <string name="reply">回复 <xliff:g id="reply">%1$s</xliff:g></string>
    <string name="reply1">回复</string>
    <string name="say_something">说点什么吧</string>
    <string name="select_photo">选择照片</string>
    <string name="take_photo_now">现在拍摄</string>
    <string name="select_photo_from_album">选择相册图片</string>
    <string name="delete_this_photo">删除图片</string>
    <string name="reply_content_can_not_empty">回复内容为空，说点什么吧</string>
    <string name="login_without_phone_or_account">请输入手机号或账号</string>
    <string name="login_without_pasword">请输入密码</string>
    <string name="login_success">登录成功</string>
    <string name="guest">游客</string>
    <string name="have_no_account_yet">还没有账户？</string>
    <string name="register_right_now">立即注册</string>
    <string name="already_read_and_agree_the_article">我已阅读并同意使用条款和隐私政策</string>
    <string name="usage_and_article">使用条款和隐私政策</string>
    <string name="please_input_password">请输入6-30位的密码</string>
    <string name="please_read_article">请阅读并同意使用条款和隐私政策</string>
    <string name="already_have_account">已有账户？</string>
    <string name="login_right_now">马上登录</string>
    <string name="register_success">注册成功</string>
    <string name="send_sms_failed">抱歉，发送短信失败</string>
    <string name="wait_for_captcha_sms">请稍等片刻，短信已发出</string>
    <string name="logout_success">退出账户成功</string>
    <string name="logout_failed">退出账户失败，请稍后再试</string>
    <string name="network_not_available">网络未连接，请检查网络后重试</string>
    <string name="search_search_btn_str">搜索</string>
    <string name="search_account_name_str">账户:</string>
    <string name="search_my_gold_coin_num_str">我的金币:</string>
    <string name="search_login_str">登录</string>
    <string name="search_my_profile_str">我的资料</string>
    <string name="search_my_participation_str">我的参与</string>
    <string name="search_my_favor_collection_str">我的收藏</string>
    <string name="search_my_published_info_str">我的发布</string>
    <string name="search_publishing_dating_billiards_info_str">发布活动</string>
    <string name="search_feed_back_str">意见反馈</string>
    <string name="search_logout_str">退出账户</string>
    <string name="nearby_billiard_mate_str">球友</string>
    <string name="nearby_billiard_assist_coauch_str">助教</string>
    <string name="nearby_billiard_coauch_str">教练</string>
    <string name="nearby_billiard_room_str">球厅</string>
    <string name="nearby_billiard_dating_str">约球</string>
    <string name="search_activity_subfragment_empty_tv_str">抱歉，暂时没有加载到任何数据</string>
    <string name="search_activity_roomfragment_empty_tv_str">未找到符合条件的球厅</string>
    <string name="search_mate_subfragment_title_distance">距离</string>
    <string name="search_dating_subfragment_title_publishdata">发布时间</string>
    <string name="search_dating_detailed_btn_i_want_in">我要参加</string>
    <string name="search_dating_detailed_tv_already_in">已参加人员</string>
    <string name="search_dating_popupwindow_no_filter">约球时间(智能排序)</string>
    <string name="search_dating_popupwindow_one">1天内</string>
    <string name="search_dating_popupwindow_two">2天内</string>
    <string name="search_dating_popupwindow_three">3天内</string>
    <string name="search_dating_popupwindow_four">4天内</string>
    <string name="search_dating_popupwindow_five">5天内</string>
    <string name="search_dating_popupwindow_six">6天内</string>
    <string name="search_dating_popupwindow_seven">7天内</string>
    <string name="search_dating_popupwindow_other">其他</string>
    <string name="search_dating_detailed_actionbar_title">约球详情</string>
    <string name="search_dating_detailed_btn_copylink_str">复制详情连接</string>
    <string name="search_dating_detailed_btn_cancel_str">取消</string>
    <string name="search_dating_detailed_title_yueqiufriend">约求好友</string>
    <string name="search_dating_detailed_title_yueqiugroup">约球群组</string>
    <string name="search_dating_detailed_title_friendcircle">微信朋友圈</string>
    <string name="search_dating_detailed_title_weichat">微信好友</string>
    <string name="search_dating_detailed_title_qqzone">QQ空间</string>
    <string name="search_dating_detailed_title_tecentweibo">腾讯微博</string>
    <string name="search_dating_detailed_title_sinaweibo">新浪微博</string>
    <string name="search_dating_detailed_title_renren">人人网</string>
    <string name="search_dating_detailed_action_collect">加入到我的收藏</string>
    <string name="search_dating_detailed_action_share">分享到朋友圈</string>
    <string name="search_dating_detailed_model_1">免费</string>
    <string name="search_dating_detailed_model_2">收费</string>
    <string name="search_dating_detailed_model_3">AA制</string>
    <string name="search_dating_detailed_title_test">第三届我最喜欢的台球杯开始报名了，欢迎大家踊跃报名.</string>
    <string name="search_dating_detailed_address_indi">活动地点:</string>
    <string name="search_dating_detailed_starttime_indi">开始时间:</string>
    <string name="search_dating_detailed_endtime_indi">结束时间:</string>
    <string name="search_dating_detailed_model_indi">收费模式:</string>
    <string name="search_dating_detailed_contact_indi">联系人:</string>
    <string name="search_dating_detailed_phone_indi">联系电话:</string>
    <string name="search_dating_detailed_activity_intro_indi">活动说明:</string>
    <string name="search_dating_detailed_address_indi_test">云川台球城(花园桥店)</string>
    <string name="search_dating_detailed_starttime_indi_test">2014-01-09 00:00:00</string>
    <string name="search_dating_detailed_endtime_indi_test">2015-09-10 00:00:00</string>
    <string name="search_dating_detailed_model_indi_test">AA制</string>
    <string name="search_dating_detailed_contact_indi_test">凤姐</string>
    <string name="search_dating_detailed_phone_indi_test">110-110-119</string>
    <string name="search_dating_detailed_activity_intro_indi_test">联系我时，就说是在约球上面看到的</string>
    <string name="search_assistcaouch_subfragment_title_cost">费用</string>
    <string name="search_assistcaouch_subfragment_title_kinds">球种</string>
    <string name="search_assistcaouch_subfragment_title_level">水平</string>
    <string name="nearby_room_subfragment_listitem_range"><xliff:g id="number" example="2500">%1$s</xliff:g>千米以内</string>
    <string name="zizhi">资质</string>
    <string name="search_coauch_filter_level_no_filter">教练资质(智能筛选)</string>
    <string name="search_assistcoauch_filter_level_no_filter">助教水平(智能筛选)</string>
    <string name="search_coauch_filter_kinds_no_filter">球种(智能筛选)</string>
    <string name="search_coauch_filter_kinds_sinuoke">斯诺克</string>
    <string name="search_coauch_filter_kinds_jiuqiu">九球</string>
    <string name="search_coauch_filter_kinds_desk">中式</string>
    <string name="search_room_subfragment_title_zone">区域</string>
    <string name="search_room_subfragment_title_price">价格</string>
    <string name="search_room_subfragment_title_review">好评</string>
    <string name="search_room_popupwindow_do_notfilter">区域(不限)</string>
    <string name="search_room_popupwindow_region_chaoyang">朝阳区</string>
    <string name="search_room_popupwindow_region_haidian">海淀区</string>
    <string name="search_room_popupwindow_region_dongcheng">通州区</string>
    <string name="search_room_popupwindow_region_xicheng">西城区</string>
    <string name="search_room_popupwindow_region_feitaiqu">丰台区</string>
    <string name="search_room_popupwindow_region_changping">昌平区</string>
    <string name="search_room_popupwindow_region_tongzhou">通州区</string>
    <string name="search_room_popupwindow_region_daxing">大兴区</string>
    <string name="search_room_popupwindow_region_shijingshan">石景山区</string>
    <string name="search_room_null"></string>
    <string name="search_room_collect_success_indicator">您已经成功的收集了该球厅的信息</string>
    <string name="weibo_share_fail">分享到微博失败</string>
    <string name="weibo_share_success">成功分享到微博</string>
    <string name="weibo_share_cancelled">分享微博被取消</string>
    <string name="weibo_need_to_install_first">您需要首先安装新浪微博客户端</string>
    <string name="weixin_need_to_install_first">您需要首先安装微信Android客户端</string>
    <string name="need_to_login_first">请您先登录之后再进行分享</string>
    <string name="tencent_weibo_share_success">成功分享到腾讯微博</string>
    <string name="renren_share_content">来自约球的用户的信息分享</string>
    <string name="renren_need_to_install_first">您需要先安装人人客户端才能完成分享</string>
    <string name="renren_share_success">成功分享到人人</string>
    <string name="renren_share_failed">分享到人人失败</string>
    <string name="renren_share_cancelld">您取消了将信息分享到人人</string>
    <string name="search_room_detailedactivity_detailed_info_separator">详细信息</string>
    <string name="search_room_detailedactivity_price_indi">人均:</string>
    <string name="search_room_detailedactivity_tag_indi">标签:</string>
    <string name="search_room_detailedactivity_address_indi">地址:</string>
    <string name="search_room_detailedactivity_phone_indi">电话:</string>
    <string name="search_room_detailedactivity_price_test">37元</string>
    <string name="search_room_detailedactivity_tag_test">苏州桥</string>
    <string name="search_room_detailedactivity_phone_test">(010)52712345</string>
    <string name="search_gallery_pager_test_str">暂时还未获取到信息...</string>
    <string name="search_mate_sub_fragment_listitem_user_zone">海淀区</string>
    <string name="search_room_sub_fragment_listitem_roomdistrict">昌平区</string>
    <string name="search_mate_popupmenu_item_filter_str">距离(智能范围)</string>
    <string name="search_mate_popupmenu_item_500_str">500米以内</string>
    <string name="search_mate_popupmenu_item_1000_str">1000米以内</string>
    <string name="search_mate_popupmenu_item_2000_str">2000米以内</string>
    <string name="search_mate_popupmenu_item_5000_str">5000米以内</string>
    <string name="search_feedback_acti_title_indi_str">标题</string>
    <string name="search_feedback_acti_content_indi_str">内容</string>
    <string name="search_feedback_acti_leave_contact_indi_str">请留下联系方式:</string>
    <string name="search_feedback_acti_btn_submit_str">提交</string>
    <string name="search_feedback_acti_et_leave_contact_hint">手机号/邮箱/QQ</string>
    <string name="comment">备注</string>
    <string name="group">分组</string>
    <string name="set_tag">给他贴个标签吧</string>
    <string name="master">师傅</string>
    <string name="student">徒弟</string>
    <string name="expert">高手</string>
    <string name="beginner">菜鸟</string>
    <string name="register">注册</string>
    <string name="password">密码</string>
    <string name="account">账户</string>
    <string name="gender">性别</string>
    <string name="inputtype">1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM</string>
</resources>