<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="8dp"
                android:paddingRight="18dp"
                android:paddingLeft="18dp"
                android:paddingTop="18dp"
        android:background="@drawable/share_popup_window_bg"
    >


    <!--用于约球详情Activity当中点击分享按钮之后弹出的popupWindow-->

    <LinearLayout
        android:id="@+id/first_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_above="@+id/temp_view"
        android:layout_marginBottom="5dp"
        >

        <TextView
            style="@style/SearchDatingDetailedImgViewStyle"
            android:id="@+id/img_search_dating_detail_share_yuqeiufirend"
            android:drawableTop="@drawable/share_friends"
            android:text="@string/search_dating_detailed_title_yueqiufriend"
            />

        <TextView
            style="@style/SearchDatingDetailedImgViewStyle"
            android:id="@+id/img_search_dating_detail_share_yueqiucircle"
            android:drawableTop="@drawable/share_group"
            android:text="@string/search_dating_detailed_title_yueqiugroup"
            />

        <TextView
            android:text="@string/search_dating_detailed_title_friendcircle"
            style="@style/SearchDatingDetailedImgViewStyle"
            android:id="@+id/img_search_dating_detail_share_friendcircle"
            android:drawableTop="@drawable/share_circle_friends"
            />

        <TextView
            android:text="@string/search_dating_detailed_title_weichat"
            android:drawableTop="@drawable/share_weizin_friends"
            style="@style/SearchDatingDetailedImgViewStyle"
            android:id="@+id/img_search_dating_detail_share_weichat"
            />
    </LinearLayout>
    <View
        android:id="@+id/temp_view"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_centerInParent="true"
        android:visibility="invisible"/>
    <LinearLayout
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/temp_view"
        android:id="@+id/second_group"
        android:weightSum="4"
        android:layout_marginBottom="7dp">

        <TextView
            android:text="@string/search_dating_detailed_title_qqzone"
            style="@style/SearchDatingDetailedImgViewStyle"
            android:id="@+id/img_search_dating_detail_share_qqzone"
            android:drawableTop="@drawable/share_qqzone"
            />

        <TextView
            android:text="@string/search_dating_detailed_title_tecentweibo"
            style="@style/SearchDatingDetailedImgViewStyle"
            android:id="@+id/img_search_dating_detail_share_qqweibo"
            android:drawableTop="@drawable/share_tengxun_weibo"
            />

        <TextView
            android:text="@string/search_dating_detailed_title_sinaweibo"
            style="@style/SearchDatingDetailedImgViewStyle"
            android:id="@+id/img_search_dating_detail_share_sinaweibo"
            android:drawableTop="@drawable/share_sina_weibo"
            />

        <TextView
            android:text="@string/search_dating_detailed_title_renren"
            android:drawableTop="@drawable/share_renren"
            style="@style/SearchDatingDetailedImgViewStyle"
            android:id="@+id/img_search_dating_detail_share_renren"
            />
    </LinearLayout>

    <Button
        android:text="@string/search_dating_detailed_btn_cancel_str"
        android:textColor="@color/md__defaultBackground"
        android:id="@+id/btn_search_dating_detailed_cancel"
        style="@style/SearchDatingBtn"
        android:layout_alignParentBottom="true"
        android:background="@drawable/search_dating_detailed_btn_bg_cancel"
        />

</RelativeLayout>