<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="5dp"
    android:padding="4dp">

    <TextView
        style="@style/PopupWindowTvStyle"
        android:id="@+id/search_mate_popupwindow_intro"
        android:text="@string/search_mate_popupmenu_item_filter_str"
        android:textColor="@android:color/holo_red_light"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/holo_red_light">
    </View>

    <TextView
        style="@style/PopupWindowTvStyle"
        android:id="@+id/search_mate_popupwindow_500"
        android:text="@string/search_mate_popupmenu_item_500_str"
        android:layout_margin="2dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray">
    </View>

    <TextView
        style="@style/PopupWindowTvStyle"
        android:id="@+id/search_mate_popupwindow_1000"
        android:text="@string/search_mate_popupmenu_item_1000_str"
        android:layout_margin="2dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray">
    </View>

    <TextView
        style="@style/PopupWindowTvStyle"
        android:id="@+id/search_mate_popupwindow_2000"
        android:text="@string/search_mate_popupmenu_item_2000_str"
        android:layout_margin="2dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray">
    </View>

    <TextView
        style="@style/PopupWindowTvStyle"
        android:id="@+id/search_mate_popupwindow_3000"
        android:text="@string/search_mate_popupmenu_item_5000_str"
        android:layout_margin="2dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray">
    </View>

</LinearLayout>