<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:gravity="center_vertical"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/radius_profile_setup">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:textSize="21sp"
            android:text="@string/comment"/>

        <View
            android:layout_margin="15dp"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/devide_line"/>

        <EditText
            android:id="@+id/add_friend_comment_et"
            android:textColorHint="#9ea7b3"
            android:textSize="21sp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:lines="@null"/>
    </LinearLayout>

    <LinearLayout
        android:gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/radius_profile_setup">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:textSize="21sp"
            android:text="@string/group"/>

        <View
            android:layout_margin="15dp"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/devide_line"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:textSize="21sp"
                android:text="球友"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@android:drawable/arrow_down_float"/>
        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_tag"/>

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/master"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expert"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beginner"/>
    </LinearLayout>

</LinearLayout>