<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/devide_line"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_shape"
        android:orientation="vertical">

        <EditText
            android:id="@+id/activity_register1_et_account"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:digits="@string/inputtype"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:drawableLeft="@drawable/account_icon"
            android:drawablePadding="10dp"
            android:hint="@string/account"
            android:textColorHint="@color/edit_text_hint_color"
            android:singleLine="true"
            android:textColor="@color/md__defaultBackground"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/devide_line"/>

        <TextView
            android:id="@+id/activity_register1_et_sex"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/basic_textview_bg"
            android:drawableLeft="@drawable/sex_icon"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/arrow"
            android:editable="false"
            android:hint="@string/gender"
            android:textSize="18sp"
            android:textColor="@color/md__defaultBackground"
            android:gravity="center_vertical"
            android:textColorHint="@color/edit_text_hint_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/devide_line"/>


        <EditText
            android:id="@+id/activity_register1_et_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:password="true"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:digits="@string/inputtype"
            android:textColorHint="@color/edit_text_hint_color"
            android:textColor="@color/md__defaultBackground"
            android:singleLine="true" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/register_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout"
        android:layout_alignStart="@+id/linearLayout"
        android:layout_below="@+id/linearLayout"
        android:layout_marginTop="40dp">

        <Button
            android:id="@+id/activity_register1_btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_button_bg"
            android:text="@string/register"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignLeft="@+id/linearLayout"
        android:layout_below="@+id/register_linear"
        android:layout_marginTop="20dp">
        <CheckBox
            android:id="@+id/register1_agree_article_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:background="@drawable/register_agree_article_bg"/>
        <TextView
            android:id="@+id/register1_read_and_agree_the_article"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            />



    </LinearLayout>

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:layout_width="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/md__defaultBackground"
            android:text="@string/already_have_account" />
        <TextView
            android:id="@+id/activity_register1_tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/login_btn_normal"
            android:textSize="18sp"
            android:text="@string/login_right_now" />
    </LinearLayout>

    <include
        layout="@layout/pre_load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        />
</RelativeLayout>
